@@ -15,6 +15,7 @@ TODO for 0.29
 - Replacement for uri lists
 - Replacement for uri handler
 - Optional libgnome support?
+- Save on close dialog buttons
 
 TODO for 0.28
 =============
